--- a/raBiProject/src/main/java/resources/config.properties
+++ b/raBiProject/src/main/java/resources/config.properties
@@ -4,7 +4,17 @@ username = admin
 password = admin123
 title = OrangeHRM
 adminText = Admin
-title = automation engineer
+title_fill = Lead automation engineer
 descritption = Hey my name is automation test software
-file_path = C:\Users\rbran\git\Java_Practice\raBiProject\external_fileData\sample.pdf
+file_path = C:\\\\Users\\\\rbran\\\\git\\\\Java_Practice\\\\raBiProject\\\\external_fileData\\\\sample.pdf
 note = i am learning everyday!
+name = Jhon Smith
+leaveName = CAN - Vacation
+from_year = 121
+from_month = 04
+from_date = 26
+to_year = 121
+to_month = 05
+to_date = 21
+comments = due of this pandemic, i want to go my hometown
+short_month_name = Dec
