Commited 11th May 2021

--- a/raBiProject/src/main/java/resources/config.properties
+++ b/raBiProject/src/main/java/resources/config.properties
@@ -18,3 +18,53 @@ to_month = 05
 to_date = 21
 comments = due of this pandemic, i want to go my hometown
 short_month_name = Dec
+delete_skills1 = Selenium
+delete_skills2 = Appium
+delete_skills3 = Selendroid
+add_skill_name1 = Selenium 
+add_skill_name2 = Appium
+add_skill_name3 = Selendroid
+add_description1 = Selenium is a web-application testing 
+add_description2 = Appium is a mobile-application testing
+add_description3 = Selendroid is a standalone windows application testing
+
+candidate_count = 4
+firstname1 = Rabi 
+middlename1 = Ranjan 
+lastname1 = Kumar 
+email1 = testuserxyz123@gmail.com
+contactNo1 = 1234567890
+jobvacancy1 = Associate IT Manager
+keywords1 = Java, SQL, Manual Testing, Selenium, Appium
+comment1 = Need Urgently
+date1 = 21
+
+firstname2 = Rabi 
+middlename2 = Patel 
+lastname2 = Kumar 
+email2 = testuserabc123@gmail.com
+contactNo2 = 9087654321
+jobvacancy2 = Junior Account Assistant
+keywords2 = Appium, Selenium, Selendroid, Nighwatch, Mocha
+comment2 = Need Urgently
+date2 = 22
+
+firstname3 = King 
+middlename3 = Kumar 
+lastname3 = Patel 
+email3 = testuserbcd123@gmail.com
+contactNo3 = 8097654321
+jobvacancy3 = Senior QA Lead
+keywords3 = Appium, Selenium, Selendroid, Nighwatch, Mocha
+comment3 = Need Urgently
+date3 = 23
+
+firstname4 = Patel 
+middlename4 = Rabi 
+lastname4 = Kumar 
+email4 = testuserefg123@gmail.com
+contactNo4 = 7089654321
+jobvacancy4 = Software Engineer
+keywords4 = Appium, Selenium, Selendroid, Nighwatch, Mocha
+comment4 = Need Urgently
+date4 = 24
