--- a/raBiProject/pom.xml
+++ b/raBiProject/pom.xml
@@ -38,7 +38,7 @@
 <dependency>
     <groupId>com.aventstack</groupId>
     <artifactId>extentreports</artifactId>
-    <version>5.0.6</version>
+    <version>5.0.8</version>
 </dependency>
 
   <dependency>
@@ -52,6 +52,20 @@
     <artifactId>log4j-core</artifactId>
     <version>2.14.1</version>
   </dependency>
+  
+<!-- https://mvnrepository.com/artifact/io.github.bonigarcia/webdrivermanager -->
+<dependency>
+    <groupId>io.github.bonigarcia</groupId>
+    <artifactId>webdrivermanager</artifactId>
+    <version>4.4.1</version>
+</dependency>
+
+<!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
+<dependency>
+    <groupId>commons-io</groupId>
+    <artifactId>commons-io</artifactId>
+    <version>2.8.0</version>
+</dependency>
 
 </dependencies>
   
