13th May Commit

--- a/raBiProject/src/main/java/resources/config.properties
+++ b/raBiProject/src/main/java/resources/config.properties
@@ -8,7 +8,7 @@ title_fill = Lead automation engineer
 descritption = Hey my name is automation test software
 file_path = C:\\\\Users\\\\rbran\\\\git\\\\Java_Practice\\\\raBiProject\\\\external_fileData\\\\sample.pdf
 note = i am learning everyday!
-name = Jhon Smith
+Employeename = Orange Test
 leaveName = CAN - Vacation
 from_year = 121
 from_month = 04
@@ -16,6 +16,8 @@ from_date = 26
 to_year = 121
 to_month = 05
 to_date = 21
+assign_from_date = 1
+assign_to_date = 10
 comments = due of this pandemic, i want to go my hometown
 short_month_name = Dec
 delete_skills1 = Selenium
@@ -27,7 +29,7 @@ add_skill_name3 = Selendroid
 add_description1 = Selenium is a web-application testing 
 add_description2 = Appium is a mobile-application testing
 add_description3 = Selendroid is a standalone windows application testing
-
+date = 21
 candidate_count = 4
 firstname1 = Rabi 
 middlename1 = Ranjan 
@@ -37,7 +39,7 @@ contactNo1 = 1234567890
 jobvacancy1 = Associate IT Manager
 keywords1 = Java, SQL, Manual Testing, Selenium, Appium
 comment1 = Need Urgently
-date1 = 21
+date1 = 11
 
 firstname2 = Rabi 
 middlename2 = Patel 
@@ -47,7 +49,7 @@ contactNo2 = 9087654321
 jobvacancy2 = Junior Account Assistant
 keywords2 = Appium, Selenium, Selendroid, Nighwatch, Mocha
 comment2 = Need Urgently
-date2 = 22
+date2 = 10
 
 firstname3 = King 
 middlename3 = Kumar 
@@ -57,7 +59,7 @@ contactNo3 = 8097654321
 jobvacancy3 = Senior QA Lead
 keywords3 = Appium, Selenium, Selendroid, Nighwatch, Mocha
 comment3 = Need Urgently
-date3 = 23
+date3 = 9
 
 firstname4 = Patel 
 middlename4 = Rabi 
@@ -67,4 +69,8 @@ contactNo4 = 7089654321
 jobvacancy4 = Software Engineer
 keywords4 = Appium, Selenium, Selendroid, Nighwatch, Mocha
 comment4 = Need Urgently
-date4 = 24
+date4 = 8
+
+reportName = Orange hrm Automation Report
+documenttitle = Extent Reports
+
