30th May Commit

--- a/raBiProject/src/main/java/resources/config.properties
+++ b/raBiProject/src/main/java/resources/config.properties
@@ -74,3 +74,13 @@ date4 = 8
 reportName = Orange hrm Automation Report
 documenttitle = Extent Reports
 
+from_gmail_email = testuserxyz54@gmail.com
+from_gmail_pass = Test1234@*
+to_gmail_email = rbranjan47@gmail.com
+mail_message = eneTOend_automation test
+mail_subject = test_mail
+
+smtp_host = smtp.gmail.com
+smtp_port = 465
+smtp_status = true
+
