--- a/Selinium_Alpha/.classpath
+++ b/Selinium_Alpha/.classpath
@@ -1,9 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" output="target/classes" path="src">
+		<attributes>
+			<attribute name="optional" value="true"/>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-11">
 		<attributes>
-			<attribute name="module" value="true"/>
+			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="E:/Automation_Jar/TestNG/testng-7.4.0.jar"/>
@@ -88,5 +93,10 @@
 	<classpathentry kind="lib" path="E:/Automation_Jar/Selenium Java_4.0/lib/opentelemetry-semconv-1.0.0-alpha.jar"/>
 	<classpathentry kind="lib" path="E:/Automation_Jar/Selenium Java_4.0/lib/reactive-streams-1.0.3.jar"/>
 	<classpathentry kind="lib" path="E:/Automation_Jar/Selenium Java_4.0/lib/slf4j-api-1.7.30.jar"/>
-	<classpathentry kind="output" path="bin"/>
+	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="output" path="target/classes"/>
 </classpath>
