--- a/raBiProject/pom.xml
+++ b/raBiProject/pom.xml
@@ -21,10 +21,10 @@
 <dependencies>
 <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
 <dependency>
-    <groupId>org.seleniumhq.selenium</groupId>
-    <artifactId>selenium-java</artifactId>
-    <version>4.0.0-beta-3</version>
-</dependency>
+        <groupId>org.seleniumhq.selenium</groupId>
+        <artifactId>selenium-api</artifactId>
+        <version>3.141.59</version>
+    </dependency>
 
 <!-- https://mvnrepository.com/artifact/org.testng/testng -->
 <dependency>
@@ -81,6 +81,12 @@
     <version>1.5</version>
 </dependency>
 
+<!-- This is the Applitools Selenium for Java SDK -->
+    <dependency>
+     <groupId>com.applitools</groupId>
+     <artifactId>eyes-selenium-java3</artifactId>
+     <version>RELEASE</version>
+    </dependency>
 </dependencies>
   
   <build>
@@ -111,6 +117,11 @@
         <plugin>
           <artifactId>maven-surefire-plugin</artifactId>
           <version>2.22.1</version>
+          <configuration>
+          <suiteXmlFiles>
+            <suiteXmlFile>testng.xml</suiteXmlFile>
+          </suiteXmlFiles>
+        </configuration>
         </plugin>
         <plugin>
           <artifactId>maven-jar-plugin</artifactId>
