--- a/Selinium_Alpha/pom.xml
+++ b/Selinium_Alpha/pom.xml
@@ -19,9 +19,8 @@
 <dependency>
     <groupId>org.seleniumhq.selenium</groupId>
     <artifactId>selenium-java</artifactId>
-    <version>4.0.0-alpha-7</version>
+    <version>4.0.0</version>
 </dependency>
-
 
 <!-- https://mvnrepository.com/artifact/io.github.bonigarcia/webdrivermanager -->
 <dependency>
@@ -29,6 +28,7 @@
     <artifactId>webdrivermanager</artifactId>
     <version>4.4.3</version>
 </dependency>
+
 <!-- https://mvnrepository.com/artifact/org.testng/testng -->
 <dependency>
     <groupId>org.testng</groupId>
