--- a/TestNG/.classpath
+++ b/TestNG/.classpath
@@ -6,33 +6,13 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/kumar.rabi/seleniumJar/selenium-java-4.6.0.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="con" path="org.testng.TESTNG_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
-	<classpathentry kind="lib" path="E:/Automation_Jar/Apache_POI/auxiliary/batik-all-1.13.jar"/>
-	<classpathentry kind="lib" path="E:/Automation_Jar/Apache_POI/auxiliary/bcpkix-jdk15on-1.68.jar"/>
-	<classpathentry kind="lib" path="E:/Automation_Jar/Apache_POI/auxiliary/bcprov-jdk15on-1.68.jar"/>
-	<classpathentry kind="lib" path="E:/Automation_Jar/Apache_POI/auxiliary/fontbox-2.0.22.jar"/>
-	<classpathentry kind="lib" path="E:/Automation_Jar/Apache_POI/auxiliary/graphics2d-0.30.jar"/>
-	<classpathentry kind="lib" path="E:/Automation_Jar/Apache_POI/auxiliary/pdfbox-2.0.22.jar"/>
-	<classpathentry kind="lib" path="E:/Automation_Jar/Apache_POI/auxiliary/xml-apis-ext-1.3.04.jar"/>
-	<classpathentry kind="lib" path="E:/Automation_Jar/Apache_POI/auxiliary/xmlgraphics-commons-2.4.jar"/>
-	<classpathentry kind="lib" path="E:/Automation_Jar/Apache_POI/auxiliary/xmlsec-2.2.1.jar"/>
-	<classpathentry kind="lib" path="E:/Automation_Jar/Apache_POI/lib/commons-codec-1.15.jar"/>
-	<classpathentry kind="lib" path="E:/Automation_Jar/Apache_POI/lib/commons-collections4-4.4.jar"/>
-	<classpathentry kind="lib" path="E:/Automation_Jar/Apache_POI/lib/commons-math3-3.6.1.jar"/>
-	<classpathentry kind="lib" path="E:/Automation_Jar/Apache_POI/lib/SparseBitSet-1.2.jar"/>
-	<classpathentry kind="lib" path="E:/Automation_Jar/Apache_POI/ooxml-lib/commons-compress-1.20.jar"/>
-	<classpathentry kind="lib" path="E:/Automation_Jar/Apache_POI/ooxml-lib/curvesapi-1.06.jar"/>
-	<classpathentry kind="lib" path="E:/Automation_Jar/Apache_POI/ooxml-lib/xmlbeans-4.0.0.jar"/>
-	<classpathentry kind="lib" path="E:/Automation_Jar/Apache_POI/poi-5.0.0.jar"/>
-	<classpathentry kind="lib" path="E:/Automation_Jar/Apache_POI/poi-examples-5.0.0.jar"/>
-	<classpathentry kind="lib" path="E:/Automation_Jar/Apache_POI/poi-excelant-5.0.0.jar"/>
-	<classpathentry kind="lib" path="E:/Automation_Jar/Apache_POI/poi-integration-5.0.0.jar"/>
-	<classpathentry kind="lib" path="E:/Automation_Jar/Apache_POI/poi-ooxml-5.0.0.jar"/>
-	<classpathentry kind="lib" path="E:/Automation_Jar/Apache_POI/poi-ooxml-full-5.0.0.jar"/>
-	<classpathentry kind="lib" path="E:/Automation_Jar/Apache_POI/poi-ooxml-lite-5.0.0.jar"/>
-	<classpathentry kind="lib" path="E:/Automation_Jar/Apache_POI/poi-scratchpad-5.0.0.jar"/>
-	<classpathentry kind="lib" path="E:/Automation_Jar/Selenium_Standalone/selenium-server-standalone-3.141.59.jar"/>
-	<classpathentry kind="lib" path="E:/Automation_Jar/TestNG/testng-7.4.0.jar"/>
+	<classpathentry kind="src" path="/Resman"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
