--- a/Selinium_Alpha/.project
+++ b/Selinium_Alpha/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Selinium_Alpha</name>
+	<name>Selenium_Alpha</name>
 	<comment></comment>
 	<projects>
 	</projects>
